@@ -13,7 +13,7 @@
     <form id="new-thing" action="new.html" method="post">
       <h1>Create a new thing</h1>
       <p><label>Description: </label>
-         <input type="text" size="80" name="description" value=""></p>
+         <input type="text" size="80" name="description" value="<%= description %>"></p>
       <p><label for="projects">Projects: </label>
           <input type="text" name="projects" value="" id="projects"></p>
       <p><label for="context">Contexts: </label>
